--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
   outline: none;
   border: none;
   text-decoration: none;
-  box-sizing: border-box;
 }
 
 body {
@@ -100,17 +99,35 @@ body {
   #menu {
     display: inline-block;
   }
-  .navbar .navbar-nav a {
+
+  .navbar .navbar-nav {
     position: absolute;
     right: -100%;
     top: 100%;
     background-color: #fff;
     width: 30rem;
     height: 100vh;
+    transition: 0.3s;
   }
 
-  .navbar .navbar-nav.active a {
+  .navbar .navbar-nav.active {
     right: 0;
+  }
+
+  .navbar .navbar-nav a {
+    color: var(--bg);
+    display: block;
+    margin: 1.5rem;
+    padding: 0.5rem;
+    font-size: 2rem;
+  }
+
+  .navbar .navbar-nav a::after {
+    transform-origin: 0 0;
+  }
+
+  .navbar .navbar-nav a:hover::after {
+    transform: scaleX(0.2);
   }
 }
 
